# sig

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  README.md  configure  configure.ac
doc/: Makefile.am  Makefile.in  sig.1  sig.pod
src/: Makefile.am  Makefile.in  config.h.in  error.c  main.c  new_parse.c  new_parse.h  params.h  scan_motif.c  scan_motif.h  seq-reader.c  seq-reader.h
test/: Makefile.am  Makefile.in  count.sh  include.sh  included  overlap.sh  pattern  pattern2  pattern_no_end  read_pattern.sh  read_pattern_no_end.sh  seq-test  test.sh
